# swe-gym

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  repo.conf
.claude-plugin/: plugin.json
.claude/skills/swe-gym-pipeline/: SKILL.md
.claude/skills/unsloth-grpo/: SKILL.md
.claude/skills/unsloth-hpo/: SKILL.md
.claude/skills/unsloth-sft/: SKILL.md
.claude/skills/unsloth-train/: SKILL.md
configs/: dpo_qwen_7b.yaml  sft_lora_7b.yaml  sft_qwen_32b.yaml  sft_torchtune.yaml
configs/bug_gen/: class_basic.yml  func_fun.yml  lm_modify.yml  lm_rewrite.yml
configs/pipeline/: env_construction.yaml  gskill_train.yaml  task_synthesis.yaml
configs/torchtune/: dpo_7b.yaml  sft_full_32b.yaml  sft_full_7b.yaml  sft_lora_7b.yaml
configs/unsloth/: gpt_oss_120b_lora.yaml  gpt_oss_20b_lora.yaml  grpo_gpt_oss_120b.yaml  grpo_nemotron3_nano.yaml  grpo_nemotron3_super.yaml  grpo_qwen3_4b.yaml  grpo_qwen3_8b.yaml  grpo_qwen3_coder_next.yaml  llama3_8b_lora.yaml  nemotron3_nano_lora.yaml  nemotron3_super_lora.yaml  qwen3_32b_lora.yaml  qwen3_4b_lora.yaml  qwen3_8b_lora.yaml  qwen3_coder_next_lora.yaml
scripts/: 01_build_env.sh  02_generate_tasks.sh  03_validate_tasks.sh  04_train_skills.sh  05_evaluate.sh  06_gen_trajectories.sh  07_prepare_sft.sh  08_train_sft.sh  08_train_sft_unsloth.py  08b_hpo.py  09_train_grpo.py  build_private_env.py  conf.py  local_data_patch.py  register_profile.py  swesmith_run.py
